# llm_pde_modeling

./: .gitignore  README.md  extract_treatment_plans.py  gemini.py  gemini_hgg.py  gemini_tnbc.py  pyproject.toml  viz_for_paper.py
experiment_data/: HGG_llm.npy  HGG_original.npy  TNBC_llm.npy  TNBC_original.npy
