[project]
name = "tumor-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "extensions>=0.4",
    "jupyter>=1.1.1",
    "langchain>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langgraph>=1.0.5",
    "tumortwin",
    "typing>=3.10.0.0",
]

[tool.uv.sources]
tumortwin = { git = "https://github.com/OncologyModelingGroup/TumorTwin.git" }
